fix: 严格校验 EPUB promotion 恢复